<!-- 2022.06.21 신승민 작성 -->
<!-- 2022.06.27 신승민 수정 -->
<resources>
    <string name="app_name">MBTI</string>

    <!-- Bottom Navigation 각 페이지 이름 -->
    <string name="home_page_name">홈</string>
    <string name="board_page_name">게시판</string>
    <string name="scrap_page_name">관심</string>
    <string name="my_info_page_name">내 정보</string>
    
    <!-- HomeFragment에 들어갈 문자열 -->
    <string name="home_title">%s TMI</string>
    <string name="hot_post"><u>🔥이 게시물이 %s에게 가장 인기에요!</u></string>
    <string name="post_category">%s</string>
    <string name="post_writer">%s 익명 | %s전</string>
    <string name="balance_post">  <u>%s의 대답을 기다려요.</u></string>
    <string name="free_post"><u>✍️%s가 작성한 글이에요.</u></string>

    <!-- BoardFragment에 들어갈 문자열 -->
    <string name="all_chip">🗄 전체</string>
    <string name="free_chip">✏️ 자유</string>
    <string name="vote_chip">📦 투표</string>
    <string name="balance_chip">🕹밸런스</string>
    <string name="all_board">🗄 전체 게시판</string>
    <string name="free_board">✏️ 자유 게시판</string>
    <string name="vote_board">📦 투표 게시판</string>
    <string name="balance_board">🕹밸런스 게시판</string>

    <!-- Post에서 댓글에 들어갈 문자열 -->
    <string name="comment_writer">%s 익명</string>
    <string name="comment_time">%s 전</string>

</resources>