<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mbtmi.mbti.view.BoardFragment"
    android:id="@+id/boardFragment">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mbti_gray_h">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/mbti_gray_i"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0">

                    <TextView
                        android:id="@+id/board_title_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:text="게시판"
                        android:textSize="32sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="35dp"
                        android:layout_marginLeft="26dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="글쓰기"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="9dp"
                        android:layout_marginRight="22dp"
                        android:textSize="15sp"
                        android:textColor="@color/mbti_mint_a"/>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/board_title_text_view"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="16dp"
                        app:chipSpacingHorizontal="8dp"
                        app:singleSelection="true"
                        app:singleLine="true">

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all_chip"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:textSize="14sp"
                            android:textColor="@color/mbti_gray_g"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/free_chip"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:textSize="14sp"
                            android:textColor="@color/mbti_gray_g"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vote_chip"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:textSize="14sp"
                            android:textColor="@color/mbti_gray_g"/>

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/balance_chip"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:textSize="14sp"
                            android:textColor="@color/mbti_gray_g"/>

                    </com.google.android.material.chip.ChipGroup>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/chip_group"
                        android:layout_marginTop="20dp"
                        android:background="@color/mbti_gray_d"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/toolbar_constraint_layout"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="bottom"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@color/mbti_gray_i"
                    app:layout_collapseMode="pin"
                    app:layout_collapseParallaxMultiplier="1">


                <TextView
                    android:id="@+id/sort_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/mbti_mint_a"
                    android:text="최신 순"/>

                <TextView
                    android:id="@+id/toolbar_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/black"
                    android:text="@string/all_board"/>

                <TextView
                    android:id="@+id/write_post_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/mbti_mint_a"
                    android:text="글쓰기"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                android:animateLayoutChanges="true"
                android:layout_marginBottom="?attr/actionBarSize">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    tools:listitem="@layout/item_post_free"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>